Bug 161786 - Manually entering "oper" in the formula editor will cause a crash
Summary: Manually entering "oper" in the formula editor will cause a crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
24.2.4.2 release
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2 t...
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2024-06-26 02:41 UTC by 1914823769
Modified: 2024-06-26 21:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt (13.36 KB, text/plain)
2024-06-26 08:46 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 1914823769 2024-06-26 02:41:21 UTC
Description:
使用点击的方式可以在公式中创建通用运算符。但是当我手动在「命令」窗口中输入oper,想要创建一个通用运算符时。如果输入的oper的右侧没有文本的话就会崩溃。我测试在.odf和o.odt中创建的公式对象中都是如此。重新打开之后,前面写过的所有未保存的内容都消失了。

其他格式下可能也有这个错误。

Version: 24.2.4.2 (X86_64) / LibreOffice Community
Build ID: 51a6219feb6075d9a4c46691dcfe0cd9c4fff3c2
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: zh-CN (zh_CN); UI: zh-CN
Calc: CL threaded

Steps to Reproduce:
1.打开一个新的.odf(或在.odt中创建一个公式对象)
2.在“命令”窗口中输入"oper"
3.

Actual Results:
之后程序崩溃了。有时再次打开libreoffice时会显示修复窗口,有时不会。但是似乎不能恢复文件的内容。

Expected Results:
/


Reproducible: Always


User Profile Reset: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: zh-CN
Module: TextDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 Julien Nabet 2024-06-26 08:46:15 UTC
Created attachment 194969 [details]
bt

On pc Debian x86-64 with master sources updated today, I got an assertion when just typing "oper" without quotes in Formula command.
Comment 2 Julien Nabet 2024-06-26 08:55:49 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/169539
Comment 3 Xisco Faulí 2024-06-26 08:57:57 UTC
Online Translation:


Description:
Use clicks to create universal operators in formulas. But when I manually enter oper in the "Command" window and want to create a universal operator. If there is no text on the right side of the input oper, it will crash. I tested that this is true in formula objects created in .odf and o.odt. After reopening, all unsaved content previously written is gone.

This error may also occur in other formats.

Version: 24.2.4.2 (X86_64) / LibreOffice Community
Build ID: 51a6219feb6075d9a4c46691dcfe0cd9c4fff3c2
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: zh-CN (zh_CN); UI: zh-CN
Calc: CL threaded

Steps to Reproduce:
1. Open a new .odf (or create a formula object in .odt)
2. Enter "oper" in the "Command" window
3.

Actual Results:
Then the program crashed. Sometimes the repair window appears when opening libreoffice again, sometimes not. But it seems that the contents of the file cannot be restored.
Comment 4 Commit Notification 2024-06-26 16:57:57 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3c91fb758a429f51b89dfe9cea088691ced6d0c1

tdf#161786: fix Math crash when typing "oper"

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2024-06-26 16:58:31 UTC
Cherry-pick for 24.8 here: https://gerrit.libreoffice.org/c/core/+/169564
for 24.2 here: https://gerrit.libreoffice.org/c/core/+/169585
Comment 6 Commit Notification 2024-06-26 21:06:30 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/871d994e03d41787563668b861739becebe021b8

tdf#161786: fix Math crash when typing "oper"

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-06-26 21:06:34 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/c58857f114041b4ab89ef818dd33581b3425ff06

tdf#161786: fix Math crash when typing "oper"

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.