tdf#161786: fix Math crash when typing "oper"

Change-Id: I8332e87e703f9138b8d13985b8697ad4b9f2191e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169539
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins
(cherry picked from commit 3c91fb758a429f51b89dfe9cea088691ced6d0c1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169585
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>